# super-excellent

./: .gitignore  .npmrc  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  PLAN.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml  release.yaml
.task-lock/: spec-browser-mcp-kimi.started  spec-ui-overhaul-p0.started  spec-updater-mcp-sse.started  super-excellent-arch-overhaul.started
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vitest.config.ts
apps/desktop/locales/: en-US.json  zh-CN.json
apps/desktop/skills/: animation-patterns.md  code-review-and-quality.md  code-simplification.md  context-engineering.md  debugging-and-error-recovery.md  decision-frameworks.md  design-critique.md  design-deliverables.md  design-styles.md  difficult-conversations.md  documentation-and-adrs.md  energy-and-focus.md  git-workflow-and-versioning.md  giving-feedback.md  inbox-zero.md  incremental-implementation.md  saying-no.md  (+18 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: compact.rs  config.rs  lib.rs  main.rs  mcp.rs  session.rs
apps/desktop/src-tauri/src/api/: client.rs  mod.rs  types.rs
apps/desktop/src-tauri/src/tools/: browser.rs  mod.rs
apps/recovery/: package.json
scripts/: build.sh  dev.sh
tasks/: spec-browser-mcp-kimi.md  spec-e2e-tests.md  spec-ui-overhaul-p0.md  spec-updater-mcp-sse.md  spec-vector-memory.md  super-excellent-arch-overhaul.md
(+175 files in other folders)
