[package]
name = "super-excellent"
version = "0.1.0"
description = "AI Agent Desktop Client - Your AI Secretary"
authors = ["EYE"]
edition = "2021"

[lib]
name = "super_excellent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
grep-regex = "0.1"
regex = "1"
sha2 = "0.10"
tauri-plugin-http = "2.5.8"
